fixed carousel issue on safari

--- a/assets/scss/components/_carousel.scss
+++ b/assets/scss/components/_carousel.scss
@@ -5,14 +5,25 @@
 }
 
 .carousel-container {
+  // scroll-snap-type: x mandatory;
+  // scrollbar-width: none;
+  // -webkit-overflow-scrolling: touch;
+  // /* Firefox */
+  // -ms-overflow-style: none;
+
+  display: flex;
+  overflow-x: auto;
   scroll-snap-type: x mandatory;
   scrollbar-width: none;
   /* Firefox */
   -ms-overflow-style: none;
+  /* IE and Edge */
+  -webkit-overflow-scrolling: touch;
 }
 
 .carousel-container::-webkit-scrollbar {
   width: 0px;
   background: transparent;
   /* Hides scrollbar in Chrome, Safari, and newer Edge */
+  display: none;
 }
